--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Auto update application",
   "main": "main.js",
   "scripts": {
+    "build": "electron-builder build --win --publish never",
+    "deploy": "electron-builder build --win --publish always",
     "test": "electron ."
   },
   "author": "Saint-Cyr",
